--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "dev-con": "concurrently \"npm start\" \"npm start --prefix client\""
+    "dev-con": "concurrently \"npm start\" \"npm run heroku-postbuild\"",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "10.x"
+  },
   "dependencies": {
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
