fix duplicate alias

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "dev-con": "concurrently \"npm start\" \"npm run heroku-postbuild\"",
+    "dev-con": "concurrently \"npm run dev\" \"npm run heroku-postbuild\"",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "keywords": [],
